# XiSort

./: CMakeLists.txt  Makefile  README.md
legacy/: README.md
src/: cli.py  core.py  xisort.cpp  xisort_cli.cpp  xisort_py.cpp  xisort_test.cpp
